--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "@fontsource-variable/jost": "^5.2.6",
+    "@midudev/tailwind-animations": "^0.2.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.9",
+    "npm": "^11.5.2",
+    "tailwindcss": "^4.1.11"
   }
 }
